--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
       display: block;
       margin: 0 auto;
     }
-    picture{
+    .picture{
+      Size:300px;
       top:5%;
       left:5%;
       transform:translate(-95%,-95%);
+      transform:rotate(45deg);
       } 
 
 </style>
