--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       display: block;
       margin: 0 auto;
     }
-    .picture{
+    picture{
       Size:300px;
       top:5%;
       left:5%;
