--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
       margin: 0 auto;
     }
     picture{
-      Size:300px;
-      top:5%;
-      left:5%;
-      transform:translate(-95%,-95%);
+      height:50px;
+      width:50px;
+      margin-top:5%;
+      margin-left:5%;
+      margin-bottom:95%;
+      margin-right:95%;
       transform:rotate(45deg);
       } 
 
