--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       display: block;
       margin: 0 auto;
     }
-    picture{
+    .picture{
       height:50px;
       width:50px;
       margin-top:5%;
