--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
       margin-right:95%;
       transform:rotate(45deg);
       } 
-
+     Img{
+       Height:50px;
+       Width:50px;
+       }
 </style>
 
 </div>
