--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     .picture{
       height:50px;
       width:50px;
+      border:10px;
       margin-top:5%;
       margin-left:5%;
       margin-bottom:95%;
@@ -95,8 +96,9 @@
       transform:rotate(45deg);
       } 
      Img{
-       Height:50px;
-       Width:50px;
+       Height:200px;
+       Width:200px;
+       transform:rotate(-45deg);
        }
 </style>
 
