--- a/index.html
+++ b/index.html
@@ -88,17 +88,16 @@
     .picture{
       height:50px;
       width:50px;
-      border:10px;
+      border:10px:black;
       margin-top:5%;
       margin-left:5%;
       margin-bottom:95%;
       margin-right:95%;
-      transform:rotate(45deg);
       } 
      Img{
        Height:200px;
        Width:200px;
-       transform:rotate(-45deg);
+       transform:rotate(45deg);
        }
 </style>
 
