--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <page size="A4">
                
                <!-- PDF CONTENT START -->
- <div class="picture"><img src="./img20.png"></div>
+              <img src="./img20.png">
 
                <h1></h1>
 
@@ -85,18 +85,15 @@
       display: block;
       margin: 0 auto;
     }
-    .picture{
-      height:50px;
-      width:50px;
-      border:10px:black;
-      margin-top:5%;
-      margin-left:5%;
-      margin-bottom:95%;
-      margin-right:95%;
-      } 
+
      Img{
        Height:200px;
        Width:200px;
+       border:10px:black;
+       margin-top:5%;
+       margin-left:5%;
+       margin-bottom:95%;
+       margin-right:95%;
        transform:rotate(45deg);
        }
 </style>
