--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     }
 
      Img{
-       Height:200px;
-       Width:200px;
-       border:10px:black;
+       Height:400px;
+       Width:400px;
+       border:10px,black;
        margin-top:5%;
        margin-left:5%;
        margin-bottom:95%;
