--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
             <page size="A4">
                
                <!-- PDF CONTENT START -->
-              <img src="./img20.png">
-
-               <h1></h1>
+             <div class="image">
+              <div class="img_inner">
+                <img src="./img20.png">
+               </div>
+              </div>
+   
 
                <!-- PDF CONTENT END -->
 
