--- a/index.html
+++ b/index.html
@@ -89,16 +89,19 @@
       margin: 0 auto;
     }
 
-     Img{
-       Height:400px;
-       Width:400px;
-       border:10px,black;
-       margin-top:5%;
-       margin-left:5%;
-       margin-bottom:95%;
-       margin-right:95%;
-       transform:rotate(45deg);
-       }
+     .image img{
+         max-width :100;
+         width:100%;
+         height:100%;
+         Object-fit:cover;}
+     .img_inner{
+         width:200px;
+         Height:200px;
+         margin-top:5%;
+         margin-left:5%;
+         transform:rotate(45deg);
+         Overflow:hidden;}
+     .img2{transform:rotate(-45deg);}
 </style>
 
 </div>
