--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                <!-- PDF CONTENT START -->
              <div class="image">
               <div class="img_inner">
+                <div class="img2">
                 <img src="./img20.png">
+                </div>
                </div>
               </div>
    
