--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
          margin-left:5%;
          transform:rotate(45deg);
          Overflow:hidden;}
-     .img2{transform:rotate(-45deg);}
+     .img_inner.img2{transform:rotate(-45deg);}
 </style>
 
 </div>
