--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
          margin-left:5%;
          transform:rotate(45deg);
          Overflow:hidden;}
-     .img_inner.img2{transform:rotate(-45deg);}
+     .img2{
+            width:200px;
+            Height:200px;
+            margin-top:5%;
+            margin-left:5%;
+            transform:rotate(-45deg);
+          }
 </style>
 
 </div>
