--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@
     }
 
      .image img{
-         max-width :100;
+         max-width :100%;
          width:100%;
          height:100%;
          Object-fit:cover;}
      .img_inner{
-         width:400px;
-         Height:400px;
+         width:300px;
+         Height:300px;
          margin-top:5%;
          margin-left:5%;
          transform:rotate(45deg);
          Overflow:hidden;}
      .img2{
-            width:400px;
-            Height:400px;
+            width:300px;
+            Height:300px;
             margin-top:5%;
             margin-left:5%;
             transform:rotate(-45deg);
