--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@
           }
       #parent1{position: relative;}
       .parlg1{
-            height:200px;
-            Width:80%;
+            height:150px;
+            Width:90%;
             background:black;
-            transform:skew(320 deg);
+            transform:skew(300 deg);
            }
        .parlg2{
-             height:200px;
-             width:80%;
+             height:150px;
+             width:90%;
              background:orange;
-             transform:skew(320 deg);
+             transform:skew(300 deg);
              Position: absolute;
              bottom:20px;
-             right:20px;
+             left:20px;
            }
        #parent{position:relative;}
        .pg{
@@ -141,7 +141,7 @@
            }
        .picture{
             position:absolute;
-            Right:90%;
+            left:90%;
            }
 </style>
 
