--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
              background:orange;
              transform:skew(300 deg);
              Position: absolute;
+             top:0px;
              bottom:20px;
-             left:20px;
+             right:20px;
            }
        #parent{position:relative;}
        .pg{
@@ -141,7 +142,8 @@
            }
        .picture{
             position:absolute;
-            left:90%;
+            top:0px;
+            right:90%;
            }
 </style>
 
