--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
             margin-top:5%;
             margin-left:5%;
             transform:rotate(-45deg);
-            Top:0px;
-            Right:90px; 
+            Top:100%;
+            Right:90%; 
           }
 </style>
 
