--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
       margin: 0 auto;
     }
 #parent{position:relative;}
+     .image{ 
+         width:100%;
+         height:100%;
+           }
      .image img{
          max-width :100%;
          width:100%;
