--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
          margin-left:5%;
          transform:rotate(45deg);
          Overflow:hidden;
-         Top:100%;
+         Top:0px;
          Right:90%;}
        
 </style>
