--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
            }
        .pic{
             position: absolute;
-             Top:0px;
-             right:90%;
+             Top:100%;
+             right:70%;
            }
         
 </style>
