--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
              right:20px;
            }
        .pic{
+            display:overlay;
             position: absolute;
-             Top:100%;
+             Top:0px;
              right:70%;
            }
         
