--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
       .img2{
             width:300px;
             Height:300px;
-            margin-top:5%;
-            margin-left:5%;
+            top:5%;
+            left:5%;
             transform:rotate(-45deg);
             }
      
@@ -137,8 +137,8 @@
             transform:skew(-40deg);
            }
        .parlg2{
-             margin-left:10%;
-             margin-top:15%;
+             left:10%;
+             top:15%;
              height:150px;
              width:90%;
              background:orange;
@@ -147,7 +147,8 @@
              bottom:20px;
              right:20px;
            }
-       .pic{
+       .pic{margin-top:5%;
+            margin-left:5%;
             display:overlay;
             position: absolute;
              Top:0px;
