--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             transform:skew(-40deg);
            }
        .parlg2{
-             left:10%;
-             top:15%;
+             margin-left:10%;
+             margin-top:15%;
              height:150px;
              width:90%;
              background:orange;
@@ -149,8 +149,7 @@
            }
        .pic{margin-top:5%;
             margin-left:5%;
-            display:overlay;
-            position: absolute;
+            position:relative;
              Top:0px;
              right:70%;
            }
