--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
            }
        .pic{margin-top:5%;
             margin-left:5%;
-            position:relative;
-             Top:0px;
+            position:absolute;
+             bottom:0px;
              right:70%;
            }
         
