--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="parent">
        
              <div class="image">
-             <div class="pic"
+             <div class="pic">
               <div class="img_inner">
                 <div class="img2">
                 <img src="./img20.png">
