--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
        .bodi{margin-top:10%;
             margin-left:15%;
             position:absolute;
-             bottom:0px;
-             left:30%;
+             Top:0px;
+             right:70%;
            }
         
 </style>
