--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
              bottom:20px;
              right:20px;
            }
-       #div1{ z-index:1;
+       #div1{
              position: absolute;
              }
-       #div2{ z-index:2;
+       #div2{
               Position: absolute;
               margin-left: 15%;
               margin-top:10%;
