--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
          .pic{
               Position: absolute;
               bottom:0px;
-              right:70px;
+              right:70%;
              }
               
         
