--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
        
         .pic{
               Position: absolute;
-              Top:-30px;
+              bottom:0px;
               right:70%;
               
              } 
