--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
      .image{ 
          width:100%;
          height:100%;
+         margin-top:10%;
+         margin-left:10%;
            }
      
        
@@ -110,12 +112,15 @@
       .img_inner{
          width:400px;
          Height:400px;
-         margin-top:5%;
-         margin-left:5%;
+         margin-top:10%;
+         margin-left:10%;
          transform:rotate(45deg);
          Overflow:hidden;
          }
-      .img2{max-width :100%;
+      .img2{
+         margin-top:10%;
+         margin-left:10%;
+         max-width :100%;
          width:100%;
          height:100%;
          Object-fit:cover;
